--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,6 +67,9 @@ jobs:
       # Whether to enable LXC docker
       ENABLE_LXC: ${{ matrix.CONFIG.enableLXC }}
 
+      # Whether to enable NETHUNTER
+      ENABLE_NETHUNTER: ${{ matrix.CONFIG.enableNetHunter }}
+
       # Set output & ccache directory
       OUT_DIR: "${{ github.workspace }}/out"
       CCACHE_DIR: "${{ github.workspace }}/out"
@@ -80,6 +83,12 @@ jobs:
       # This action checks-out your CONFIGSitory under $GITHUB_WORKSPACE, so your workflow can access it.
       - name: 😄 Checkout
         uses: actions/checkout@v4
+
+      # Set Git Config to apply patches
+      - name: Set Git Config
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "github-actions@users.noreply.github.com"
 
       # Install prerequisites for Ubuntu
       - name: ⭐ Install prerequisites
@@ -289,6 +298,24 @@ jobs:
             git am -s < ${{ env.WORKSPACE }}/LXC/Patches/xt_qtaguid.patch
             echo "🎖️ Apply xt_qtaguid.patch"
           fi
+
+      - name: 😋 Setup Kali-Nethunter
+        working-directory: ${{ env.KERNEL_NAME }}
+        env:
+          DEFCONFIG: ${{ env.WORKSPACE }}/${{ env.KERNEL_NAME }}/arch/${{ steps.generate-args.outputs.ARCH }}/configs/${{env.KERNEL_DEFCONFIG_PATH}}
+        if: ${{ env.ENABLE_NETHUNTER == 'true' }}
+        run: |
+          git clone https://github.com/acai66/kali-nethunter_patches.git ${{ env.WORKSPACE }}/Nethunter
+          git am -s < ${{ env.WORKSPACE }}/Nethunter/add-rtl88xxau-5.6.4.2-drivers.patch
+          git am -s < ${{ env.WORKSPACE }}/Nethunter/add-wifi-injection-4.14.patch
+          git am -s < ${{ env.WORKSPACE }}/Nethunter/fix-ath9k-naming-conflict.patch
+          sleep 8
+          git clone https://github.com/acai66/Kali-defconfig-checker.git ${{ env.WORKSPACE }}/Kali
+          cd ${{ env.WORKSPACE }}/Kali
+          chmod +x *.sh
+          chmod +x check-kernel-config
+          ${{ env.WORKSPACE }}/Kali/check-kernel-config ${{ env.DEFCONFIG }} -w
+          echo "🎖️ Apply NetHunnter patches"
 
       - name: 👍 Start building the kernel
         working-directory: ${{ env.KERNEL_NAME }}
