--- a/configs/olive.lolz.config.json
+++ b/configs/olive.lolz.config.json
@@ -43,6 +43,7 @@
               }
           },
           "enableKernelSU": true,
-          "enableLXC": false
+          "enableLXC": false,
+          "enableNetHunter": false        
     }
 ]
