更新 phoenix.Pure.config.json

--- a/configs/phoenix.Pure.config.json
+++ b/configs/phoenix.Pure.config.json
@@ -42,6 +42,7 @@
             }
           },
           "enableKernelSU": true, 
-          "enableLXC": false
+          "enableLXC": false,
+          "enableNetHunter": false        
     }
 ]
