更新 phoenix.pe12.config.json

--- a/configs/phoenix.pe12.config.json
+++ b/configs/phoenix.pe12.config.json
@@ -46,6 +46,7 @@
         }
           },
           "enableKernelSU": true,
-          "enableLXC": false
+          "enableLXC": false,
+          "enableNetHunter": false        
     }
 ]
