更新 phoenix.redcliff.config.json

--- a/configs/phoenix.redcliff.config.json
+++ b/configs/phoenix.redcliff.config.json
@@ -45,6 +45,7 @@
             }
           },
           "enableKernelSU": true,
-          "enableLXC": false
+          "enableLXC": false,
+          "enableNetHunter": false        
     }
 ]
