--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,9 +73,13 @@ jobs:
     steps:
       # Set swap space
       - name: 📐 Set swap to 10G
-        uses: pierotofy/set-swap-space@master
+        uses: easimon/maximize-build-space@master
         with:
-          swap-size-gb: 10
+          swap-size-mb: 10240
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
 
       # This action checks-out your CONFIGSitory under $GITHUB_WORKSPACE, so your workflow can access it.
       - name: 😄 Checkout
