--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,7 +87,10 @@ jobs:
       # This action checks-out your CONFIGSitory under $GITHUB_WORKSPACE, so your workflow can access it.
       - name: 😄 Checkout
         uses: actions/checkout@v4
-
+      - name: Set Git config
+        run: |
+          git config --global user.name github-actions[bot]
+          git config --global user.email 41898282+github-actions[bot]@users.noreply.github.com
       # Install prerequisites for Ubuntu
       - name: ⭐ Install prerequisites
 
