更新 mondrian.baalam.config.json

--- a/configs/mondrian.baalam.config.json
+++ b/configs/mondrian.baalam.config.json
@@ -42,6 +42,7 @@
             }
           },
           "enableKernelSU": true, 
+          "enableKernelSUExtPatch": false,
           "enableLXC": false        
     }
 ]
