更新 mondrian.evolutionX.config.json

--- a/configs/mondrian.evolutionX.config.json
+++ b/configs/mondrian.evolutionX.config.json
@@ -42,7 +42,7 @@
             }
           },
           "enableKernelSU": true, 
-          "enableKernelSUExtPatch": true,
+          "enableKernelSUExtPatch": false,
           "enableLXC": false        
     }
 ]
