--- a/configs/phoenix.Pure.config.json
+++ b/configs/phoenix.Pure.config.json
@@ -42,6 +42,7 @@
             }
           },
           "enableKernelSU": true, 
+          "enableKernelSUExtPatch": true,
           "enableLXC": false
     }
 ]
