--- a/configs/phoenix.pe12.config.json
+++ b/configs/phoenix.pe12.config.json
@@ -46,6 +46,7 @@
         }
           },
           "enableKernelSU": true,
+          "enableKernelSUExtPatch": true,
           "enableLXC": false
     }
 ]
