--- a/configs/mondrian.evolutionX.config.json
+++ b/configs/mondrian.evolutionX.config.json
@@ -42,6 +42,7 @@
             }
           },
           "enableKernelSU": true, 
+          "enableKernelSUExtPatch": false,
           "enableLXC": false        
     }
 ]
