--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -268,7 +268,8 @@ jobs:
           cat arch/${{ env.ARCH }}/configs/${{ env.KERNEL_DEFCONFIG_PATH }}
       - name: 😋 Setup KernelSU Ext Patch
         working-directory: ${{ env.KERNEL_NAME }}
-        if: ${{ env.ENABLE_KERNELSU_ExtPatch == 'true' && env.ENABLE_KERNELSU == 'true' }}
+        if: false
+        #if: ${{ env.ENABLE_KERNELSU_ExtPatch == 'true' && env.ENABLE_KERNELSU == 'true' }}
         run: |
           # Add Patch
           git am -s < ${{ env.WORKSPACE }}/Kernelsu/Patch/path_umount.patch
