--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -271,10 +271,10 @@ jobs:
         #if: false
         if: ${{ env.ENABLE_KERNELSU == 'true' }}
         run: |
-          # Add Patch to kernel before 5.9
-          cp ${{ env.WORKSPACE }}/Kernelsu/Patch/auto_patch_umount.patch ./KernelSU
+          # Add add-auto-backport
+          cp ${{ env.WORKSPACE }}/Kernelsu/Patch/add-auto-backport.patch ./KernelSU
           cd ./KernelSU
-          patch -p1 --forward < auto_patch_umount.patch || true
+          patch -p1 --forward < add-auto-backport.patch || true
           # git am -s < ${{ env.WORKSPACE }}/Kernelsu/Patch/path_umount.patch
           # git am -s < ${{ env.WORKSPACE }}/Kernelsu/Patch/get_cred_rcu.patch #not work
           # sed -i '260 r ${{ env.WORKSPACE }}/Kernelsu/Patch/get_cred_rcu.h' ./include/linux/cred.h
