--- a/configs/olive.lolz.419.config.json
+++ b/configs/olive.lolz.419.config.json
@@ -1,7 +1,7 @@
 [
     {
         "kernelSource": {
-            "name": "Redmi8-LOLZ",
+            "name": "Redmi8-LOLZ419",
             "repo": "https://github.com/Jprimero15/lolz_kernel_redmi8",
             "branch": "v28",
             "device": "olive",
