--- a/configs/olive.lolz.419.config.json
+++ b/configs/olive.lolz.419.config.json
@@ -1,11 +1,11 @@
 [
     {
         "kernelSource": {
-            "name": "Redmi8-LOLZ419",
+            "name": "LOLZ",
             "repo": "https://github.com/Jprimero15/lolz_kernel_redmi8",
             "branch": "v28",
-            "device": "olive",
-            "defconfig": "lolz_olive_defconfig"
+            "device": "xiaomi-sdm439",
+            "defconfig": "vendor/xiaomi-sdm439.config"
           },
           "toolchains": [
           { 
