--- a/configs/olive.lolz.config.json
+++ b/configs/olive.lolz.config.json
@@ -45,5 +45,52 @@
           "enableKernelSU": true,
           "enableKernelSUExtPatch": true,
           "enableLXC": false
+    },
+    {
+        "kernelSource": {
+            "name": "Redmi8-LOLZ",
+            "repo": "https://github.com/Jprimero15/lolz_kernel_redmi8",
+            "branch": "V24_test",
+            "device": "olive",
+            "defconfig": "olive_defconfig"
+          },
+          "toolchains": [
+          {
+            "repo": "https://gitlab.com/Jprimero15/lolz_clang.git",
+            "branch": "main",
+            "name": "tools",
+            "binaryEnv": [
+                "bin"
+            ]
+          }
+        ],
+          "enableCcache": true,
+        "params": {
+          "ARCH": "arm64",
+          "CC": "tools/bin/clang",
+          "externalCommands": {
+          "CROSS_COMPILE": "tools/bin/aarch64-linux-gnu-", 
+          "CROSS_COMPILE_ARM32": "tools/bin/arm-linux-gnueabi-", 
+          "CLANG_TRIPLE": "tools/bin/aarch64-linux-gnu-",
+          "AS": "tools/bin/llvm-as", 
+          "AR": "tools/bin/llvm-ar",  
+          "NM":"tools/bin/llvm-nm",  
+          "OBJCOPY":"tools/bin/llvm-objcopy",  
+          "OBJDUMP":"tools/bin/llvm-objdump",  
+          "STRIP":"tools/bin/llvm-strip",  
+          "LD":"tools/bin/ld.lld"
+          }
+          },
+          "AnyKernel3": {
+            "use": true,
+            "release": true,
+            "custom": {
+              "repo": "https://github.com/luyanci/Ak3",
+              "branch": "hm8"
+              }
+          },
+          "enableKernelSU": true,
+          "enableKernelSUExtPatch": true,
+          "enableLXC": false
     }
 ]
