--- a/configs/olive.lolz.config.json
+++ b/configs/olive.lolz.config.json
@@ -52,7 +52,7 @@
             "repo": "https://github.com/Jprimero15/lolz_kernel_redmi8",
             "branch": "V24_test",
             "device": "olive",
-            "defconfig": "olive_defconfig"
+            "defconfig": "olive-stock_defconfig"
           },
           "toolchains": [
           {
