--- a/configs/olive.lolz.config.json
+++ b/configs/olive.lolz.config.json
@@ -48,7 +48,7 @@
     },
     {
         "kernelSource": {
-            "name": "Redmi8-LOLZ",
+            "name": "Redmi8-LOLZ-stock",
             "repo": "https://github.com/Jprimero15/lolz_kernel_redmi8",
             "branch": "V24_test",
             "device": "olive",
