更新 olive.lolz.config.json

--- a/configs/olive.lolz.config.json
+++ b/configs/olive.lolz.config.json
@@ -9,9 +9,9 @@
           },
           "toolchains": [
           {
-            "repo": "https://gitlab.com/Jprimero15/lolz_clang.git",
-            "branch": "main",
-            "name": "tools",
+            "repo": "https://gitlab.com/yaosp/prebuilts_clang_host_linux-x86_clang-r475365b.git",
+            "branch": "master",
+            "name": "clang",
             "binaryEnv": [
                 "bin"
             ]
