更新 beryllium-MIUI.config.json

--- a/configs/beryllium-MIUI.config.json
+++ b/configs/beryllium-MIUI.config.json
@@ -9,7 +9,7 @@
     },
     "enableKernelSU": true,
     "enableCcache": true,
-    "enableKernelSUExtPatch": true,
+    "enableKernelSUExtPatch": false,
     "enableLXC": false,
     "toolchains": [
       {
