--- a/configs/ursa-NGK.config.json
+++ b/configs/ursa-NGK.config.json
@@ -9,7 +9,7 @@
     },
     "enableKernelSU": true,
     "enableCcache": true,
-    "enableKernelSUExtPatch": true,
+    "enableKernelSUExtPatch": false,
     "enableLXC": false,
     "toolchains": [
       {
