更新 phoenix.miui.config.json

--- a/configs/phoenix.miui.config.json
+++ b/configs/phoenix.miui.config.json
@@ -9,7 +9,7 @@
     },
     "enableCcache": true,
     "enableKernelSU": true,
-    "enableKernelSUExtPatch": true,
+    "enableKernelSUExtPatch": false,
     "enableLXC": false,
     "toolchains": [
       {
