--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,6 +88,11 @@ jobs:
       - name: 😄 Checkout
         uses: actions/checkout@v4
 
+      - name: 😄 Set Git config
+        run: |
+          git config --global user.name github-actions[bot]
+          git config --global user.email 41898282+github-actions[bot]@users.noreply.github.com
+
       # Install prerequisites for Ubuntu
       - name: ⭐ Install prerequisites
 
