--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -278,7 +278,7 @@ jobs:
       - name: 😋 Setup kpm Patch
         working-directory: ${{ env.KERNEL_NAME }}
         #if: false
-        if: ${{ env.ENABLE_KERNELSU == 'true' && env.ENABLE_KERNELSU_ExtPatch == 'true'}}
+        #if: ${{ env.ENABLE_KERNELSU == 'true' && env.ENABLE_KERNELSU_ExtPatch == 'true'}}
         run: |
           wget -Oaddkpm.patch https://github.com/luyanci/android_kernel_xiaomi_sm6150_miui/commit/c8461e50a646fc4a6e5822b6598988815b2d5e42.patch
           wget -Ofixpatch.patch https://github.com/luyanci/android_kernel_xiaomi_sm6150_miui/commit/b9647fa667c947e03f74115e59aeb6f0b9469a3d.patch
